<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimens_24dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/dimens_180dp"
        android:layout_height="@dimen/dimens_180dp"
        android:src="@drawable/ic_made_in_web"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/formContainer"
        android:layout_marginBottom="@dimen/dimens_24dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formContainer"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeColor="@color/purple_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:gravity="start"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeColor="@color/purple_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:gravity="start"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red_error"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dimens_8dp"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:text="@string/label_button_login"
            android:backgroundTint="@color/purple_700"
            app:layout_constraintTop_toBottomOf="@id/tvError"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_divider"
                android:layout_marginHorizontal="@dimen/dimens_8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/tvDivider"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingHorizontal="@dimen/dimens_16dp"
                android:layout_marginHorizontal="@dimen/dimens_8dp"
                android:text="@string/label_register"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/size_16sp"/>

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvDivider"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/label_forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16sp"
                android:paddingHorizontal="@dimen/dimens_8dp"
                android:layout_marginHorizontal="@dimen/dimens_8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dimens_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/purple_700"/>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
